--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,14 @@
     font-family: plantagenet-cherokee;
     src: url('../font/plantagenet-cherokee.ttf');
 }
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v16/S6uyw4BMUTPHjx4wXiWtFCc.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 /* visual styles */
 body{
     margin:auto;
@@ -25,7 +31,7 @@ h2{
     margin-bottom: 0px
 }
 p{
-    font-family: 'Lato';
+    font-family: 'Lato', sans-serif;
     line-height: 1.9em;
     margin-bottom: 15px;
 }
@@ -39,7 +45,8 @@ p{
     width: 100%;
 }
 .social-links, .social-links:hover{
-    font-size: 1em;
+    font-family: 'Lato', sans-serif;
+    font-size: 5em;
     color: black;
     text-decoration: none;
 }
